<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:contentDescription="@string/welcome_icon"
        android:padding="32dp"
        app:srcCompat="@drawable/welcome_icon" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/welcome_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:padding="26dp"
        android:text="@string/paragraph"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:backgroundTint="#5E33E0"
        android:text="@string/btn_start"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="20dp" />
</LinearLayout>